--- a/web_dynamic/static/styles/body.css
+++ b/web_dynamic/static/styles/body.css
@@ -1,7 +1,8 @@
 body {
+    background-color: aquamarine;
+    color: brown;
     margin: 0;
     padding: 0;
-    color: antiquewhite;
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
 }
