added alerts page

--- a/web_dynamic/static/styles/body.css
+++ b/web_dynamic/static/styles/body.css
@@ -1,6 +1,6 @@
 body {
-    background-color: aquamarine;
-    color: brown;
+    background-color: rgb(15, 119, 122);
+    color: rgb(7, 9, 82);
     margin: 0;
     padding: 0;
     font-size: 14px;
