--- a/web_dynamic/templates/report.html
+++ b/web_dynamic/templates/report.html
@@ -42,11 +42,13 @@
                         <option value="vandalism">Vandalism</option>
                         <option value="drug abuse">Drug abuse</option>
                         <option value="carjacking">Carjacking</option>
+                        <option value="suspicious activity">Suspicious Activity</option>
+                        <option value="missing person">Missing person</option>
                         <option value="others">Others</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="datetime" class="label">Time and Date it happened</label>
+                    <label for="datetime" class="label">Date of incident</label>
                     <br>
                     <input type="datetime-local" id="datetime" class="form-input" style="width: 385px;" required>
                 </div>
@@ -56,7 +58,7 @@
                     <textarea id="description" class="form-input" rows="6" required></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="anonymous" class="label">Report anonymously? (optional)</label>
+                    <label for="anonymous" class="label">Report as anonymous? (optional)</label>
                     <input type="checkbox" id="anonymous" class="form-input checkbox">
                 </div>
                 <button type="submit" class="form-button form-button--submit">Submit Report</button>
