--- a/web_dynamic/templates/c_alerts.html
+++ b/web_dynamic/templates/c_alerts.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="../static/styles/header.css">
         <link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
         <link rel="stylesheet" type="text/css" href="../static/styles/alerts.css">
+        <link rel="stylesheet" type="text/css" href="../static/styles/body.css">
     </head>
     <body>
         <header>
