--- a/web_dynamic/templates/v_alerts.html
+++ b/web_dynamic/templates/v_alerts.html
@@ -8,6 +8,14 @@
     <script src="../static/scripts/alerts.js"></script>
 </head>
 <body>
+    <div class="dashboard-container">
+        <aside class="side-panel">
+            <ul>
+                <li><a href="#" onclick="loadPage('create-alert')">Create Alert</a></li>
+                <li><a href="#" onclick="loadPage('my-reports')">My Reports</a></li>
+            </ul>
+        </aside>
+    </div>
     <main>
         <div class="container">
             <h1>Crime Alerts</h1>
