--- a/web_dynamic/static/styles/reports.css
+++ b/web_dynamic/static/styles/reports.css
@@ -1,7 +1,7 @@
 .form {
     max-width: 100%;
     margin: auto;
-    padding: 20px;
+    padding: 0px;
     border-radius: 5px;
 }
 .form-group {
@@ -12,31 +12,45 @@
 }
 .label {
     display: block;
-    margin-bottom: 2px;
+    margin-bottom: 0%;
     font-weight: bold;
     padding-top: 0.5em;
     float: left;
-    font-size: 16px;
+    font-size: 13px;
 }
 .form-input {
     display: inline-block;
-    width: 200px;
-    max-width: 900px;
+    max-width: 1000px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-sizing: border-box;
+    vertical-align: top;
+    font-size: 16px;
+    width: 500px;
+}
+.form-textarea {
+    display: inline-block;
+    max-width: 1000px;
     padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
     box-sizing: border-box;
     vertical-align: top;
     font-size: 15px;
+    height: 100px;
+    width: 500px;
 }
 .container {
     background: white;
     max-width: 100%;
-    margin: 0%;
-    padding: 15px;
+    margin: 2%;
+    padding: 140px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2.2em;
     margin-bottom: 0.5em;
     text-align: center;
 }
